prometheus/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - mon-prometheus-server
      secretName: tls-secret
  rules:
  - host: jinojino.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mon-prometheus-server
          servicePort: 9090
